// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter component renders custom react component where pre tag is by default 1`] = `
<p
  style={
    Object {
      "background": "#F0F0F0",
      "color": "#444",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre",
      }
    }
  >
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       woah = 
    </span>
    <span
      className="hljs-function hljs-params"
      style={Object {}}
    >
      fun
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       =&gt;
    </span>
    <span
      style={Object {}}
    >
       fun + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    <span
      style={Object {}}
    >
      
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       dude = woah(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ) + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    <span
      style={Object {}}
    >
      
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      function
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "color": "#880000",
          "fontWeight": "bold",
        }
      }
    >
      thisIsAFunction
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      (
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      ) 
    </span>
    <span
      style={Object {}}
    >
      {

    </span>
    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       [
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ].map(
    </span>
    <span
      className="hljs-function hljs-params"
      style={Object {}}
    >
      n
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       =&gt;
    </span>
    <span
      style={Object {}}
    >
       n + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ).filter(n !== 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    }

    <span
      style={Object {}}
    >
      
    </span>
    <span
      style={
        Object {
          "color": "#397300",
        }
      }
    >
      console
    </span>
    <span
      style={Object {}}
    >
      .log(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'making up fake code is really hard'
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    

    <span
      style={Object {}}
    >
      
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      function
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "color": "#880000",
          "fontWeight": "bold",
        }
      }
    >
      itIs
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      (
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      ) 
    </span>
    <span
      style={Object {}}
    >
      {

    </span>
    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'no seriously really it is'
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    }

    
  </code>
</p>
`;

exports[`SyntaxHighlighter renders div where pre tag is by default 1`] = `
<div
  style={
    Object {
      "background": "#F0F0F0",
      "color": "#444",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre",
      }
    }
  >
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       woah = 
    </span>
    <span
      className="hljs-function hljs-params"
      style={Object {}}
    >
      fun
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       =&gt;
    </span>
    <span
      style={Object {}}
    >
       fun + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    <span
      style={Object {}}
    >
      
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      const
    </span>
    <span
      style={Object {}}
    >
       dude = woah(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ) + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    <span
      style={Object {}}
    >
      
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      function
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "color": "#880000",
          "fontWeight": "bold",
        }
      }
    >
      thisIsAFunction
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      (
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      ) 
    </span>
    <span
      style={Object {}}
    >
      {

    </span>
    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       [
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      2
    </span>
    <span
      style={Object {}}
    >
      ,
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      ].map(
    </span>
    <span
      className="hljs-function hljs-params"
      style={Object {}}
    >
      n
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       =&gt;
    </span>
    <span
      style={Object {}}
    >
       n + 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      1
    </span>
    <span
      style={Object {}}
    >
      ).filter(n !== 
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      3
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    }

    <span
      style={Object {}}
    >
      
    </span>
    <span
      style={
        Object {
          "color": "#397300",
        }
      }
    >
      console
    </span>
    <span
      style={Object {}}
    >
      .log(
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'making up fake code is really hard'
    </span>
    <span
      style={Object {}}
    >
      );

    </span>
    

    <span
      style={Object {}}
    >
      
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      function
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
       
    </span>
    <span
      className="hljs-function"
      style={
        Object {
          "color": "#880000",
          "fontWeight": "bold",
        }
      }
    >
      itIs
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      (
    </span>
    <span
      className="hljs-function"
      style={Object {}}
    >
      ) 
    </span>
    <span
      style={Object {}}
    >
      {

    </span>
    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#880000",
        }
      }
    >
      'no seriously really it is'
    </span>
    <span
      style={Object {}}
    >
      ;

    </span>
    }

    
  </code>
</div>
`;
